# simple_etl

./: README.md  data.csv  data.parquet  etl.py  pipeline.py  pyproject.toml
data/: day01.json  day02.json  day03.json
