[tool.poetry]
name = "simple-etl"
version = "0.1.0"
description = ""
authors = ["Paulo Aguiar <aguiarlapaulo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
fastparquet = "^2024.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
